--- a/style.css
+++ b/style.css
@@ -5,11 +5,12 @@ body {
   font-family: "Roboto", sans-serif;
   margin: 0;
   min-height: 100vh;
+  width: 100vw;
+  overflow-x: hidden;
 }
 
 .container {
-  width: 100vw;
-  height: 100%;
+  margin: 0 20px;
 }
 
 .header {
@@ -35,7 +36,8 @@ body {
 }
 
 .hero-page {
-  width: 1000px;
+  max-width: 1000px;
+  width: 100%;
   height: 500px;
   margin: auto;
 }
@@ -88,9 +90,8 @@ body {
   border: none;
 }
 
-.card-header{
+.card-header {
   margin-top: 100px;
-  
 }
 
 .card-container {
@@ -159,7 +160,8 @@ a {
 }
 
 .news-letter {
-  width: 1000px;
+  max-width: 1000px;
+  width: 100%;
   height: 500px;
   margin: auto;
   margin-top: 100px;
@@ -179,26 +181,26 @@ a {
   border-radius: 5px 5px 5px 0;
 }
 
-.news-letter-head{
+.news-letter-head {
   color: black;
   font-size: 30px;
 }
 
-.news-letter-form-grid{
+.news-letter-form-grid {
   box-shadow: rgb(149 157 165 / 20%) 0px 8px 24px;
 }
 
-.news-letter-form{
+.news-letter-form {
   display: flex;
   flex-direction: column;
 }
 
-.news-letter-form2{
+.news-letter-form2 {
   padding-left: 25px;
   padding-right: 25px;
 }
 
-.sub-btn{
+.sub-btn {
   background-color: #8e84d0;
   color: white;
   padding: 10px 12px;
@@ -209,19 +211,44 @@ a {
   margin-top: 20px;
 }
 
-.news-letter-text-area{
+.news-letter-text-area {
   padding: 10px 12px;
   border: 1px solid #c1c1c1;
   font-size: 18px;
 }
 
-.news-letter-form-grid{
+.news-letter-form-grid {
   display: flex;
   align-items: center;
 }
 
 @media screen and (max-width: 900px) {
-  .card-container{
+  .hero-page-grid {
     display: block;
+    height: 300px;
+  }
+  .image-grid {
+    display: none;
+  }
+  .card{
+    margin-top: 40px;
+  }
+  .card-container {
+    display: block;
+  }
+  .card-img {
+    object-fit:cover;
+    max-width: 400px;
+    width: 100%;
+    height: 400px;
+  }
+  .news-letter{
+    height: 200px;
+  }
+  .news-letter-grid {
+    display: block;
+  }
+  .news-letter-image {
+    display: none;
   }
 }
