--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,6 @@
+@import "header.css";
+@import "footer.css";
+@import "news-letter.css";
 * {
   list-style-type: none;
 }
@@ -10,28 +13,6 @@ body {
 
 .container {
   margin: 0 20px;
-}
-
-.header {
-  display: flex;
-  justify-content: space-evenly;
-  align-items: center;
-}
-
-.nav-list {
-  display: flex;
-  justify-content: space-around;
-  margin: 0;
-  font-size: 16px;
-  color: black;
-}
-
-.nav-sublist {
-  margin-left: 20px;
-}
-
-.nav-sublist:hover {
-  color: #8cc74d;
 }
 
 .hero-page {
@@ -136,89 +117,21 @@ a {
   text-decoration: none;
 }
 
-.landing-footer {
-  width: 100%;
-  margin-top: 100px;
-  background-color: #8e84d0;
-  color: white;
-}
-
-.footer-header {
-  text-align: center;
-}
-
-.footer-icon {
-  font-size: 30px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
 .icons {
   margin-left: 10px;
 }
 
-.news-letter {
-  max-width: 1000px;
-  width: 100%;
-  height: 500px;
-  margin: auto;
-  margin-top: 100px;
+figcaption {
+  text-align: center;
+  font-size: 12px;
+  padding-top: 5px;
 }
 
-.news-letter-grid {
-  display: grid;
-  grid-template-columns: 40% 60%;
-  height: 100%;
-}
-
-.news-letter-image {
-  background-image: url(../Images/Avocado.jpg);
-  background-position: center;
-  background-size: cover;
-  box-shadow: rgb(149 157 165 / 20%) 0px 8px 24px;
-  border-radius: 5px 5px 5px 0;
-}
-
-.news-letter-head {
-  color: black;
-  font-size: 30px;
-}
-
-.news-letter-form-grid {
-  box-shadow: rgb(149 157 165 / 20%) 0px 8px 24px;
-}
-
-.news-letter-form {
-  display: flex;
-  flex-direction: column;
-}
-
-.news-letter-form2 {
-  padding-left: 25px;
-  padding-right: 25px;
-}
-
-.sub-btn {
-  background-color: #8e84d0;
-  color: white;
-  padding: 10px 12px;
-  border: none;
-  border-radius: 5px;
-  width: 100px;
-  margin: auto;
-  margin-top: 20px;
-}
-
-.news-letter-text-area {
-  padding: 10px 12px;
-  border: 1px solid #c1c1c1;
-  font-size: 18px;
-}
-
-.news-letter-form-grid {
-  display: flex;
-  align-items: center;
+.Avatar{
+  vertical-align: bottom;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
 }
 
 @media screen and (max-width: 900px) {
@@ -229,19 +142,19 @@ a {
   .image-grid {
     display: none;
   }
-  .card{
+  .card {
     margin-top: 40px;
   }
   .card-container {
     display: block;
   }
   .card-img {
-    object-fit:cover;
+    object-fit: cover;
     max-width: 400px;
     width: 100%;
     height: 400px;
   }
-  .news-letter{
+  .news-letter {
     height: 200px;
   }
   .news-letter-grid {
